# nn-frameworks

./: README.md  main.ipynb  pyproject.toml
